apps/jellyseer/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyseer
    #  labels:
    #    cert-manager-tls: jellyseer
