apps/jellyseer/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseer
  labels:
    app.kubernetes.io/name: jellyseer
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: jellyseer
